# openadapt-desktop

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  DESIGN.md  LICENSE  README.md  RELEASES.md  index.html  package-lock.json  package.json  pyproject.toml  vite.config.ts
.github/workflows/: build.yml  ffmpeg-runtime.yml  native-freshness.yml  native-release.yml  notify-docs.yml  pypi-publish.yml  release.yml  test.yml
docs/: BETA_NATIVE_INSTALLERS.md  CODE_SIGNING.md  EXPERIMENTAL_NATIVE_INSTALLERS.md  POLICY_SYNC.md
engine/: __init__.py  __main__.py  audit.py  cli.py  config.py  controller.py  db.py  dispatch.py  flow_bridge.py  hosted.py  ipc.py  main.py  managed_vision.py  monitor.py  policy.py  review.py  runner_loop.py  scrubber.py  socket_server.py  storage_manager.py  upload_manager.py  vision-runtime-manifest.json
engine/auth/: __init__.py  browser_pkce.py  pairing.py  paste.py  provider.py  store.py
engine/backends/: __init__.py  federated.py  hosted_ingest.py  huggingface.py  protocol.py  s3.py  wormhole.py
screenshots/: screenshots.json
scripts/: build_frozen_engine.py  build_managed_ffmpeg_runtime.sh  check_release_consistency.py  frozen_notices.py  generate_screenshots.py  native_release.py  native_signing.py  package_ffmpeg_runtime.py  smoke_test_frozen_flow.py  smoke_test_native_installer.py  verify_build_artifact.py
src/: App.tsx  index.html  program.html  review.html  settings.html
src-tauri/: Cargo.toml  Entitlements.plist  ffmpeg-runtime-manifest.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  ffmpeg.rs  main.rs  pairing.rs  sidecar.rs  tray.rs
src/lib/: engine.ts  types.ts
src/screens/: Login.tsx  Onboarding.tsx  RecordReview.tsx  Runner.tsx  Settings.tsx  Teach.tsx  WatchRun.tsx  WorkflowLibrary.tsx
src/styles/: app.css  tokens.css
src/ui/: OsWarning.tsx  ReplayMonitor.tsx  primitives.tsx
tests/: conftest.py  test_build_frozen_engine.py  test_capture_runtime_contract.py  test_ffmpeg_runtime_packaging.py  test_frozen_notices.py  test_managed_vision.py  test_native_installer_smoke.py  test_native_release.py  test_native_signing.py  test_pairing_protocol_boundary.py  test_public_metadata.py
tests/test_e2e/: __init__.py  conftest.py  test_ipc.py  test_pipeline.py  test_screenshots.py  test_ui.py
tests/test_engine/: conftest.py  test_audit.py  test_auth_browser_pkce.py  test_auth_dispatch.py  test_auth_pairing.py  test_auth_paste.py  test_auth_store.py  test_backends.py  test_cli.py  test_config_hosted.py  test_controller.py  test_db.py  test_db_loop.py  test_dispatch.py  test_flow_bridge.py  test_hosted.py  test_main.py  test_monitor.py  test_policy.py  test_review_state.py  test_runner_loop.py  test_scrubber.py  test_socket_server.py  test_storage.py  test_upload.py
