[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openadapt-desktop"
version = "0.5.1"
description = "Experimental desktop authoring surface and local capture/review tooling for OpenAdapt workflows"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "OpenAdapt AI", email = "hello@openadapt.ai" },
]
keywords = ["desktop", "recording", "workflow-authoring", "human-in-the-loop", "automation"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Desktop Environment",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "openadapt-capture>=0.3.0",
    "openadapt-privacy>=0.1.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "httpx>=0.27",
    "keyring>=24",
    "loguru",
    "psutil",
    "tqdm",
]

[project.optional-dependencies]
enterprise = ["boto3"]
full = [
    "openadapt-desktop[enterprise]",
]
build = [
    "pyinstaller>=6.16,<7",
]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
    "python-semantic-release>=9.15.2",
]

[project.scripts]
openadapt-desktop = "engine.cli:main"

[project.urls]
Homepage = "https://openadapt.ai"
Repository = "https://github.com/OpenAdaptAI/openadapt-desktop"
Issues = "https://github.com/OpenAdaptAI/openadapt-desktop/issues"


[tool.hatch.build.targets.wheel]
packages = ["engine"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]


[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
version_variables = ["engine/__init__.py:__version__"]
commit_message = "chore: release {version}"
major_on_zero = false
allow_zero_version = true
build_command = "python -m ensurepip --upgrade && python -m pip install --disable-pip-version-check uv==0.11.29 && python scripts/check_release_consistency.py --sync && git add uv.lock && uv build --wheel --sdist && python scripts/check_release_consistency.py --require-dist"

[tool.semantic_release.branches.main]
match = "main"

[tool.semantic_release.commit_parser_options]
allowed_tags = ["build", "chore", "ci", "docs", "feat", "fix", "perf", "refactor", "style", "test"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]

[tool.pytest.ini_options]
testpaths = ["tests"]
