[package]
name = "openadapt-desktop"
version = "0.1.0"
description = "Cross-platform desktop app for continuous screen recording and AI training data collection"
authors = ["OpenAdapt AI"]
license = "MIT"
edition = "2021"

[features]
default = ["local-storage"]
local-storage = []
s3-upload = []
r2-upload = ["s3-upload"]
hf-upload = []
federated = []
# Build profiles
enterprise = ["local-storage", "s3-upload"]
community = ["local-storage", "hf-upload", "r2-upload"]
full = ["enterprise", "community", "federated"]

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[[bin]]
name = "openadapt-desktop"
path = "src/main.rs"
