[package]
name = "openadapt-desktop"
version = "0.8.0"
description = "Beta installed companion for OpenAdapt authoring, teaching, and local pairing"
authors = ["OpenAdapt AI"]
license = "MIT"
edition = "2021"

[features]
default = ["local-storage"]
local-storage = []
s3-upload = []
r2-upload = ["s3-upload"]
hf-upload = []
federated = []
# Build profiles
enterprise = ["local-storage", "s3-upload"]
community = ["local-storage", "hf-upload", "r2-upload"]
full = ["enterprise", "community", "federated"]

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
tauri-plugin-updater = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["sync", "time"] }
url = "2"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[[bin]]
name = "openadapt-desktop"
path = "src/main.rs"
